Added Negative Login Test and fixed Location selection